objects/CSD_Key_Part_Management__c.object
<CustomObject>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>Exceptional_Part_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Key Part</fullName>
                    <default>true</default>
                    <label>Key Part</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DND Key Part Management</label>
    <nameField>
        <label>CSD Key Part Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DND Key Part Managements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>